--- a/xcodegen.yml
+++ b/xcodegen.yml
@@ -59,9 +59,9 @@ targets:
       CURRENT_PROJECT_VERSION: 1
       MARKETING_VERSION: "1.0"
       TARGETED_DEVICE_FAMILY: 1
-      DEVELOPMENT_TEAM: ${SWISH_EXAMPLE_DEVELOPMENT_TEAM}
+      DEVELOPMENT_TEAM: ${FQAUTH_DEVELOPMENT_TEAM}
       GENERATE_INFOPLIST_FILE: YES
-      PRODUCT_BUNDLE_IDENTIFIER: ${SWISH_EXAMPLE_BUNDLE_ID}.UnitTests
+      PRODUCT_BUNDLE_IDENTIFIER: ${FQAUTH_BUNDLE_ID}.UnitTests
   AppUITests:
     type: bundle.ui-testing
     platform: iOS
@@ -77,6 +77,6 @@ targets:
       CURRENT_PROJECT_VERSION: 1
       MARKETING_VERSION: "1.0"
       TARGETED_DEVICE_FAMILY: 1
-      DEVELOPMENT_TEAM: ${SWISH_EXAMPLE_DEVELOPMENT_TEAM}
+      DEVELOPMENT_TEAM: ${FQAUTH_DEVELOPMENT_TEAM}
       GENERATE_INFOPLIST_FILE: YES
-      PRODUCT_BUNDLE_IDENTIFIER: ${SWISH_EXAMPLE_BUNDLE_ID}.UITests
+      PRODUCT_BUNDLE_IDENTIFIER: ${FQAUTH_BUNDLE_ID}.UITests
