logged in wrapper + network helper + more !

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 FQAUTH_BUNDLE_ID=com.example.BundleID
 FQAUTH_DEVELOPMENT_TEAM=ARST3333
 FQAUTH_SERVER_URL=auth.example.com
+RANDOM_STRING_SERVER_URL=microservice.example.com
