remove Keychain convenience init's, restructure to take a FakeKeychain

--- a/xcodegen.yml
+++ b/xcodegen.yml
@@ -57,6 +57,7 @@ targets:
     sources: [AppTests]
     dependencies:
       - target: App
+      - package: JWTKit
     info:
       path: AppTests/Info.plist
       properties:
